--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <fieldset>
-    <div><a href="https://www.baidu.com">百度一下</a></div>
+    <div><a href="https://www.baidu.com" target="_blank">百度一下</a></div>
     <legend>可编辑的表格</legend>
     <table id="oTable" style="background-color:#eeeeee;" bordercolor="#aaaaaa" border="1" cellpadding="0" cellpadding="2" width="100%">
         <thead>
