--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>测试</title>
+    <style>
+      img{
+        border: 1px solid #000;
+      }
+    </style>
     <script>
         function addRow(){
             var oTable = document.getElementById("oTable");
@@ -20,6 +25,7 @@
 <body>
 <fieldset>
     <div><a href="https://www.baidu.com" target="_blank">百度一下</a></div>
+    <div><img src="./jj.jpg" alt=""></div>
     <legend>可编辑的表格</legend>
     <table id="oTable" style="background-color:#eeeeee;" bordercolor="#aaaaaa" border="1" cellpadding="0" cellpadding="2" width="100%">
         <thead>
