--- a/todo/index.html
+++ b/todo/index.html
@@ -3,64 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>My Todo App</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">
+    <link rel="stylesheet" href="css/base.css">
 </head>
 <body>
 <div class="msg">
-    <span class="msg_content"></span>
+    <span class="msg-content"></span>
     <span class="anchor confirmed">知道了</span>
 </div>
-
-<div class="container"> <!--总容器开始-->
-    <h2>我的日程</h2>
-    <form class="addTask">
+<div class="container"><!-- 总容器开始 -->
+    <h1>我的Todo</h1>
+    <form class="add-task">
         <input name="content"
                type="text"
-               placeholder="just do it"
+               placeholder="e.g. 下午记得买菜"
                autofocus
-               autocomplete="off">
+               autocomplete="off"
+        >
         <button type="submit">submit</button>
     </form>
-
-    <div class="taskList"> <!--清单列表开始-->
-        <!--<div class="task_item">-->
-        <!--    <span><input type="checkbox"></span>-->
-        <!--    <span class="task_content">item content 1</span>-->
-        <!--    <span>删除</span>-->
-        <!--    <span>详情</span>-->
-        <!--</div>-->
-    </div> <!--清单列表结束-->
-
-    <div class="task_detail_mask"></div>
-
-    <div class="task_detail"> <!--任务详情-->
-        <!--<div>
-            <div class="content"> //任务标题开始
-                just do it
-            </div> //任务标题结束
-
-            <div> //任务描述开始
-                <div class="desc">
-                    <textarea id=""></textarea>
-                </div>
-            </div> //任务描述结束
-
-            <div class="remind"> //任务提示时间
-                <input type="date">
-                <button type="submit">submit</button>
-            </div> //提示时间结束
-        </div>-->
-    </div> <!--任务详情结束-->
-
-</div> <!--总容器结束-->
-
-<video src="alert.mp3" class="alerter"></video>
-<script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
-<script type="text/javascript" src="node_modules/store/store.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
-
+    <div class="task-list"><!--清单列表开始-->
+        <!--<div class="task-item">&lt;!&ndash; 任务开始 &ndash;&gt;-->
+        <!--<span><input type="checkbox"></span>-->
+        <!--<span class="task-content">item content 1</span>-->
+        <!--<span>delete</span>-->
+        <!--<span>detail</span>-->
+        <!--</div>&lt;!&ndash; 任务结束 &ndash;&gt;-->
+    </div><!--清单列表结束-->
+    <div class="task-detail-mask"></div>
+    <div class="task-detail"><!-- 任务详情开始 -->
+    </div><!-- 任务详情结束 -->
+</div><!-- 总容器结束 -->
+<video class="alerter" src="alert.mp3"></video>
+<script src="node_modules/jquery/dist/jquery.js"></script>
+<script src="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.js"></script>
+<script src="node_modules/store/store.js"></script>
+<script src="js/base.js"></script>
 </body>
 </html>
