--- a/todo/index.html
+++ b/todo/index.html
@@ -13,15 +13,15 @@
     <span class="anchor confirmed">知道了</span>
 </div>
 <div class="container"><!-- 总容器开始 -->
-    <h1>我的Todo</h1>
+    <h1>我的日程</h1>
     <form class="add-task">
         <input name="content"
                type="text"
-               placeholder="e.g. 下午记得买菜"
+               placeholder="请把日程安排写在这里"
                autofocus
                autocomplete="off"
         >
-        <button type="submit">submit</button>
+        <button type="submit">确&nbsp;定</button>
     </form>
     <div class="task-list"><!--清单列表开始-->
         <!--<div class="task-item">&lt;!&ndash; 任务开始 &ndash;&gt;-->
