--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="nav"></div>
+  <div class="nav">
+    <p>孙浩然</p>
+  </div>
   <div class="banner">
     <img src="./images/bg.jpg" alt="">
-    <div class="text">
-        <p>欢迎</p>
-        <p>来到我的个人主页</p>
-    </div>
   </div>
 
   <div class="about ">
     <div class="box">
       <h1>关于我</h1>
       <div class="boxRight">
-        <p>I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding, icon design or web development.</p>
+        <p>
+          熟练ps切图<br>
+          能够使用html、css快速完成web应用开发和布局<br>
+          掌握原生js、jquery及vue，能够完成常见的前端动态效果<br>
+          熟悉主流浏览器的差异，能够解决常见的浏览器兼容问题<br>
+          具备良好的沟通和表达，善于团队合作，具备基本的业务分析能力</p>
       </div>
     </div>
   </div>
@@ -50,7 +53,7 @@
           <span>2014.07-2015.10</span>
         </dt>
         <dd>
-          公司服务对象主要为奔驰、奥迪、雷克萨斯等高档汽车品牌4s店，工作职责为店内的活动物料设计，包括背景板、指示牌、礼品卡等等。
+          公司服务对象为奔驰、奥迪、雷克萨斯等高档汽车品牌4s店，<br>工作内容为设计活动主形象用于背景板、指示牌、礼品卡等等活动物料。
         </dd>
       </dl>
       <dl>
@@ -60,7 +63,8 @@
           <span>2016.01-2017.03</span>
         </dt>
         <dd>
-          公司主要从事黄金类业务，分为金融及电商俩大部分，我所在的部门主要负责电商业务。
+          公司为国美控股子公司（线上项目为国美黄金），主要经营黄金相关业务；<br>
+          部门负责运营天猫、京东及国美在线网店，涉及网店活动及库存管理
         </dd>
       </dl>
     </div>
@@ -73,7 +77,7 @@
         <dt>
           <h2>旭和健康</h2>
         </dt>
-        <dd>I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding, icon design or web development.</dd>
+        <dd>这是一个主营医疗服务的企业网站；<br>功能：轮播、回到顶部、导航等等；<br>技术：html、css、jquery。</dd>
         <dd>
           <p class="linkBox">
             <a href="Healthy/index.html" target="_blank">项目展示</a>
@@ -84,7 +88,7 @@
         <dt>
           <h2>日程表</h2>
         </dt>
-        <dd>I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding, icon design or web development.</dd>
+        <dd>这是一个主要用jquery开发的清单应用；<br>功能：完成及删除选项、提醒详细列表、定时响铃提醒等等；<br>技术：html、css、jquery；<br>插件：Store.js、datetimepicker。</dd>
         <dd>
           <p class="linkBox">
             <a href="todo/index.html" target="_blank">项目展示</a>
