--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h1>关于我</h1>
       <div class="boxRight">
         <p>
+          虽然是自学前端，但是依然可以实现以下要求：<br>
           熟练ps切图<br>
           能够使用html、css快速完成web应用开发和布局<br>
           掌握原生js、jquery及vue，能够完成常见的前端动态效果<br>
@@ -77,7 +78,8 @@
         <dt>
           <h2>旭和健康</h2>
         </dt>
-        <dd>这是一个主营医疗服务的企业网站；<br>功能：轮播、回到顶部、导航等等；<br>技术：html、css、jquery。</dd>
+        <dd>这是一个医疗服务类的企业网站，可以实现各个页面之间跳转和常见动效；页面使用html5构建，样式使用css3，动画效果使用jquery实现。
+</dd>
         <dd>
           <p class="linkBox">
             <a href="Healthy/index.html" target="_blank">项目展示</a>
@@ -88,7 +90,8 @@
         <dt>
           <h2>日程表</h2>
         </dt>
-        <dd>这是一个主要用jquery开发的清单应用；<br>功能：完成及删除选项、提醒详细列表、定时响铃提醒等等；<br>技术：html、css、jquery；<br>插件：Store.js、datetimepicker。</dd>
+        <dd>这是一个主要用jquery开发的清单应用，可以实现任务的生成、完成及删除；并具备查看任务详细内容、定时声音提醒及存储任务功能；使用插件：Store.js、datetimepicker。
+<br>使用插件：Store.js、datetimepicker。</dd>
         <dd>
           <p class="linkBox">
             <a href="todo/index.html" target="_blank">项目展示</a>
