--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span>2014.07-2015.10</span>
         </dt>
         <dd>
-          公司服务对象为奔驰、奥迪、雷克萨斯等高档汽车品牌4s店，<br>工作内容为设计活动主形象用于背景板、指示牌、礼品卡等等活动物料。
+          公司服务对象是奔驰、奥迪、雷克萨斯等汽车品牌4s店；我的工作内容是与客户沟通需求并根据需求设计主形象用于活动所需物料。
         </dd>
       </dl>
       <dl>
@@ -64,8 +64,7 @@
           <span>2016.01-2017.03</span>
         </dt>
         <dd>
-          公司为国美控股子公司（线上项目为国美黄金），主要经营黄金相关业务；<br>
-          部门负责运营天猫、京东及国美在线网店，涉及网店活动及库存管理
+          任职期间负责运营天猫、京东及国美在线网店，主要工作内容为活动专题海报制作及库存管理。
         </dd>
       </dl>
     </div>
@@ -78,7 +77,7 @@
         <dt>
           <h2>旭和健康</h2>
         </dt>
-        <dd>这是一个医疗服务类的企业网站，可以实现各个页面之间跳转和常见动效；页面使用html5构建，样式使用css3，动画效果使用jquery实现。
+        <dd>当时为了尝试整站制作而做了这个企业网站；在chrome浏览器下测试，使用html5、css3及jquery技术；为了增加可复用性和减少代码量将头部及页脚部分单独制作；项目体会：传统方法不可避免的存在大量的重复代码、对数据与视图的变化也不能做到及时处理。
 </dd>
         <dd>
           <p class="linkBox">
@@ -90,8 +89,8 @@
         <dt>
           <h2>日程表</h2>
         </dt>
-        <dd>这是一个主要用jquery开发的清单应用，可以实现任务的生成、完成及删除；并具备查看任务详细内容、定时声音提醒及存储任务功能；使用插件：Store.js、datetimepicker。
-<br>使用插件：Store.js、datetimepicker。</dd>
+        <dd>当时为了熟悉jquery制作了这个清单应用，实现了添加、删除及定时提醒等功能；因为没有后端所以利用Store.js把提醒任务存储在浏览器中，时间选项采用datetimepicker插件实现；项目体会：jquery的选择器、事件绑定及元素操作不仅简化了原生js的代码量还使得它的功能更强大。
+</dd>
         <dd>
           <p class="linkBox">
             <a href="todo/index.html" target="_blank">项目展示</a>
